cupt (2.2.1~) UNRELEASED; urgency=low

  * console:
    - Managing packages:
      - Fixed the work of action override options inside the interactive
        prompt for new package expressions.
      - 'markauto', 'unmarkauto': reject not installed packages. Thanks to
        Karol Kozłowski for the report.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 19 Sep 2011 11:24:03 +0300

cupt (2.2.0) unstable; urgency=low

  * Upload to unstable.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 17 Sep 2011 16:17:38 +0300

cupt (2.2.0~rc2) experimental; urgency=low

  * lib:
    - system/worker:
      - Downloading of index data should continue regardless of the download
        result of Release signature. Thanks to Karol Kozłowski for the report.
      - Don't run pre-install-packages hooks if there is no packages to
        unpack.
      - [Jonathan Nieder] Switch back to system() for running commands without
        an input, such as dpkg, providing them a standard input from
        a terminal. Fixes the regression since 2.2.0~rc1. (Closes: #640849)
    - hashsums:
      - Don't check gcrypt version despite what is advised in its manual.
        Linker does its work fine.
  * debian:
    - control:
      'libcupt2-0': set Breaks against download methods earlier than 2.0.0~rc1
      because of the redirect download option change.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 11 Sep 2011 13:52:25 +0300

cupt (2.2.0~rc1) experimental; urgency=low

  * console:
    - Managing packages:
      - New positional action override options '--install', '--remove',
        '--satisfy', '--unsatisfy'.
      - The option '--purge' is converted to positional action override one.
      - The action 'purge' does not set global purge flag anymore but only
        purges packages specified as arguments.
    - 'clean', 'autoclean': remove also partially downloaded archive files.
      Thanks to Karol Kozłowski for the suggestion. (Closes: #633485)